--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Backend
+spring.jpa.database=postgresql
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost/baseSecureWalk
+spring.datasource.username=postgres
+spring.datasource.password=2024
+server.port=8089
