--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/base-SecureWalk
+spring.datasource.url=jdbc:postgresql://localhost/base_SecureWalk
 spring.datasource.username=postgres
 
-spring.datasource.password=1234
+spring.datasource.password=Rafael.81
 server.port=8085
