--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM openjdk:24-jdk AS builder
 WORKDIR /app
 COPY . .
+RUN chmod +x mvnw
 RUN ./mvnw clean package -DskipTests
 FROM openjdk:24-jdk
 WORKDIR /app
