--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,13 +1,4 @@
 spring.application.name=Backend
 spring.jpa.database=postgresql
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
 server.port=${PORT:8080}
-
-
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-jwt.secret=${JWT_SECRET}
+spring.profiles.active=local
