--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -6,7 +6,7 @@ COPY . .
 
 RUN ./mvnw clean package -DskipTests
 
-FROM amazoncorretto:17-alpine-jre
+FROM amazoncorretto:17-alpine
 
 WORKDIR /app
 
@@ -15,4 +15,3 @@ COPY --from=builder /app/target/*.jar app.jar
 EXPOSE 8085
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
-
