--- a/SecureWalk/package.json
+++ b/SecureWalk/package.json
@@ -24,7 +24,10 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.19",
+    "animate.css": "^4.1.1",
     "express": "^4.18.2",
+    "ngx-owl-carousel-o": "^18.0.1",
+    "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
