--- a/SecureWalk/package.json
+++ b/SecureWalk/package.json
@@ -24,8 +24,11 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.19",
+    "@auth0/angular-jwt": "^5.2.0",
     "animate.css": "^4.1.1",
+    "chart.js": "^4.5.0",
     "express": "^4.18.2",
+    "ng2-charts": "^7.0.0",
     "ngx-owl-carousel-o": "^18.0.1",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
